--- a/languages/ja.json
+++ b/languages/ja.json
@@ -4,7 +4,7 @@
     "lang":"ja",
     "lang_ext":"ja-JP",
     "separator":"それから",
-    "instructions":"ボイスコマンドでCozmoを操作できます。複数の操作を「それから」と発した後、続けて指示することもできます。\n可能なボイスコマンドは以下のとおりです。",
+    "instructions":"ボイスコマンドでTelloを操作できます。複数の操作を「それから」と発した後、続けて指示することもできます。\n可能なボイスコマンドは以下のとおりです。",
     "text_wait":"\n準備ができたら <SHIFT> キーを押してください",
     "text_say":"\nボイスコマンドをどうぞ (5秒でタイムアウトします。もしくは ctrl+c で終了します。)",
     "error_one":"ボイスコマンドが１箇所理解できませんでした。可能なボイスコマンドは以下のとおりです。",
